--- a/app/views/financeiro/_instalments.html.erb
+++ b/app/views/financeiro/_instalments.html.erb
@@ -1,10 +1,10 @@
-<div id="_guardaResultadoPesquisa">
+<div id="guardaResultadoPesquisa">
   <h2>Resultado da pesquisa</h2>
 
   <table cellspadding="0" cellspacing="0" width="100%">
     <tr border="0">
       <th width="14%"><span>Código</span></th>
-      <th width="14%"><span>Nº</span></th>
+      <th width="4%"><span>Nº</span></th>
       <th width="14%"><span>Nome</span></th>
       <th width="14%"><span>Data Vencimento</span></th>
       <th width="14%"><span>Status</span></th>
@@ -15,13 +15,16 @@
     <% instalments.each do |i| %>
       <tr onclick="location.href ='<%= financeiro_editar_lancamento_path(i.release) %>';">
         <td width="14%"><span><%= i.code %></span></td>
-        <td width="14%"><span><%= i.number_instalment %></span></td>
+        <td width="4%"><span><%= i.number_instalment %></span></td>
         <td width="14%"><span><%= i.name %></span></td>
         <td width="14%"><span><%= i.expiration_date_to_s %></span></td>
         <td width="14%"><span><%= i.status %></span></td>
-        <td width="14%"><span>R$ <%= i.amount.to_s.gsub(".",",") %></span></td>
-        <td width="14%"><span><%= link_to "Pagar", financeiro_pagar_path(i.id), :class => "btVoltarForm" %></span></td>
+        <td width="14%"><span>R$ <%= number_to_currency(i.amount) %></span></td>
+        <td width="14%"><span><%= link_to("Pagar", financeiro_pagar_path(i.id), :class => "btVoltarForm") if i.pending? %></span></td>
       </tr>
     <% end %>
   </table>
 </div>
+<script type="text/javascript">
+  $("#guardaResultadoPesquisa").slideDown(500);
+</script>
