Nao mostrar a mensagem de sem resultados enquanto nao houver feito a busca

--- a/app/views/financeiro/_no_results.html.erb
+++ b/app/views/financeiro/_no_results.html.erb
@@ -5,5 +5,7 @@
   </p>
 </div>
 <script type="text/javascript">
-  $("#guardaResultadoPesquisa").slideDown(500);
+  if(location.href.split("?")[1]){
+    $("#guardaResultadoPesquisa").slideDown(500);
+  }
 </script>
