--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -674,39 +674,21 @@ margin:0px 10px;
     float:right;
 }
 
-.historicoContatos{
+#contentInternas #guardaHistoricoContatos{
+    width:470px;
+    display:inline-block;
+    border-bottom:1px solid #aaa;
+    margin:0px 0px 20px 0px;
+}
+
+#guardaHistoricoContatos .historicoContatos{
     float:left;
     width:450px;
     border-top:1px solid #aaa;
-    border-bottom:1px solid #aaa;
     padding:20px 10px 20px 10px;
 }
 
-.historicoContatos span{
+#guardaHistoricoContatos .historicoContatos span{
     float:left;
     padding:4px 0px 0px 0px;
-}
-
-#escurece{
-    float:left;
-    width:100%;
-    height:100%;
-    background:#000;
-    position:fixed;
-    top:0px;
-    left:0px;
-    opacity:0.7;
-}
-
-#guardaLightBox{
-    float:left;
-    width:500px;
-    height:300px;
-    padding:10px 10px 10px 10px;
-    background:#fff;
-    position:fixed;
-    left:50%;
-    top:50%;
-    display:inline;
-    margin:-160px 0px 0px -260px;
 }
